--- a/front_repo/docker-compose.yml
+++ b/front_repo/docker-compose.yml
@@ -16,6 +16,6 @@ services:
     image: certbot/certbot
     restart: unless-stopped
     volumes:
-      - ./nginx/certbot/prod/conf:/etc/letsencrypt
-      - ./nginx/certbot/prod/www:/var/www/certbot
+      - ./nginx/prod/certbot/prod/conf:/etc/letsencrypt
+      - ./nginx/prod/certbot/prod/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
