add prod settings

--- a/backend_repo/docker-compose.yml
+++ b/backend_repo/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     container_name: backend
     volumes:
       - ./backend/:/app/
@@ -16,7 +16,7 @@ services:
   rand:
     build:
       context: ./rand
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     container_name: rand
     volumes:
       - ./rand/:/usr/src/app/
