--- a/front_repo/docker-compose.yml
+++ b/front_repo/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: frontend
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
       - 80:80
       - 443:443
