--- a/front_repo/nginx/prod/nginx.conf
+++ b/front_repo/nginx/prod/nginx.conf
@@ -5,6 +5,7 @@ pid        /var/run/nginx.pid;
 events {
   worker_connections  1024;
 }
+
 http {
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
@@ -14,67 +15,51 @@ http {
   access_log  /var/log/nginx/access.log  main;
   sendfile        on;
   keepalive_timeout  65;
+  upstream backend {
+    server  backend:8000;
+  }
+  upstream rand {
+    server  rand:6000;
+  }
   server {
     listen       80;
-    server_name  localhost;
+#     server_name  calendarbot.net;
     location / {
       root   /app;
+      add_header Access-Control-Allow-Origin *;
       index  index.html;
       try_files $uri $uri/ /index.html;
     }
+    # backend urls
+    location ~ ^/(admin|api|static) {
+
+
+      proxy_redirect off;
+      proxy_pass 'http://backend';
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      add_header Access-Control-Allow-Origin *;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Upgrade $http_upgrade;
+    }
+
+    location /rand {
+      add_header Access-Control-Allow-Origin *;
+      proxy_redirect off;
+      proxy_pass 'http://rand';
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Upgrade $http_upgrade;
+    }
+
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
       root   /usr/share/nginx/html;
     }
   }
+
 }
 
 
 
-# PROD
-# user  nginx;
-# worker_processes  1;
-#
-# events {
-#   worker_connections  1024;
-# }
-#
-# http {
-#   include /etc/nginx/mime.types;
-#   client_max_body_size 100m;
-#
-#   upstream backend {
-#     server backend:8000;
-#   }
-#
-#   server {
-#     listen 80;
-#     charset utf-8;
-#
-#     root /dist/;
-#     index index.html;
-#
-#     # backend urls
-#     location ~ ^/(admin|api) {
-#       proxy_redirect off;
-#       proxy_pass http://backend;
-#       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#       proxy_set_header Host $http_host;
-#     }
-#
-#     # static files
-#     location /staticfiles {
-#       autoindex on;
-#       alias /usr/src/app/staticfiles;
-#     }
-#
-#     # frontend
-#     location / {
-#       try_files $uri $uri/ @rewrites;
-#     }
-#
-#     location @rewrites {
-#       rewrite ^(.+)$ /index.html last;
-#     }
-#   }
-# }
