--- a/front_repo/nginx/dev/nginx.conf
+++ b/front_repo/nginx/dev/nginx.conf
@@ -23,9 +23,10 @@ http {
   }
   server {
     listen       80;
-#     server_name  localhost;
+#     server_name  calendarbot.net;
     location / {
       root   /app;
+      add_header Access-Control-Allow-Origin *;
       index  index.html;
       try_files $uri $uri/ /index.html;
     }
