--- a/backend_repo/rand/Dockerfile
+++ b/backend_repo/rand/Dockerfile
@@ -18,7 +18,7 @@ COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
 # copy entrypoint.sh
-COPY entrypoint_dev.sh .
+COPY entrypoint.sh .
 
 # copy project
 COPY . .
