--- a/front_repo/nginx/dev/nginx.conf
+++ b/front_repo/nginx/dev/nginx.conf
@@ -15,10 +15,10 @@ http {
   access_log  /var/log/nginx/access.log  main;
   sendfile        on;
   keepalive_timeout  65;
-  upstream backend {
+  upstream backend_container {
     server  backend:8000;
   }
-  upstream rand {
+  upstream rand_container {
     server  rand:6000;
   }
   server {
@@ -35,7 +35,7 @@ http {
 
 
       proxy_redirect off;
-      proxy_pass 'http://backend';
+      proxy_pass 'http://backend_container$request_uri';
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header Connection "upgrade";
@@ -44,7 +44,7 @@ http {
 
     location /rand {
       proxy_redirect off;
-      proxy_pass 'http://rand';
+      proxy_pass 'http://rand_container$request_uri';
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header Connection "upgrade";
