--- a/front_repo/docker-compose.yml
+++ b/front_repo/docker-compose.yml
@@ -3,6 +3,10 @@ version: '3'
 services:
   frontend:
     container_name: frontend
+    volumes:
+      - ./nginx/prod/certbot/conf:/etc/letsencrypt
+      - ./nginx/prod/certbot/www:/var/www/certbot
+      - ./dist:/app/
     build:
       context: .
       dockerfile: Dockerfile
@@ -12,10 +16,10 @@ services:
       - 8080:8080
     network_mode: backend_repo_back
 
-#  certbot:
-#    image: certbot/certbot
-#    restart: unless-stopped
-#    volumes:
-#      - ./nginx/prod/certbot/prod/conf:/etc/letsencrypt
-#      - ./nginx/prod/certbot/prod/www:/var/www/certbot
-#    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+  certbot:
+    image: certbot/certbot
+    restart: unless-stopped
+    volumes:
+      - ./nginx/prod/certbot/prod/conf:/etc/letsencrypt
+      - ./nginx/prod/certbot/prod/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
