--- a/front_repo/nginx/prod/nginx.conf
+++ b/front_repo/nginx/prod/nginx.conf
@@ -15,15 +15,37 @@ http {
   access_log  /var/log/nginx/access.log  main;
   sendfile        on;
   keepalive_timeout  65;
-  upstream backend {
+  upstream backend_container {
     server  backend:8000;
   }
-  upstream rand {
+  upstream rand_container {
     server  rand:6000;
   }
   server {
-    listen       80;
-    server_name  calendarbot.net;
+    server_name calendarbot.net;
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+  }
+
+  server {
+    listen 443 ssl;
+    server_name tarataika.ru;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/tarataika.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tarataika.ru/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+
     location / {
       root   /app;
       add_header Access-Control-Allow-Origin *;
@@ -35,18 +57,16 @@ http {
 
 
       proxy_redirect off;
-      proxy_pass 'http://backend';
+      proxy_pass 'http://backend_container$request_uri';
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
-      add_header Access-Control-Allow-Origin *;
       proxy_set_header Connection "upgrade";
       proxy_set_header Upgrade $http_upgrade;
     }
 
     location /rand {
-      add_header Access-Control-Allow-Origin *;
       proxy_redirect off;
-      proxy_pass 'http://rand';
+      proxy_pass 'http://rand_container$request_uri';
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header Connection "upgrade";
@@ -60,6 +80,3 @@ http {
   }
 
 }
-
-
-
