--- a/front_repo/docker-compose.yml
+++ b/front_repo/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   frontend:
     container_name: frontend
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     volumes:
       - ./nginx/prod/certbot/conf:/etc/letsencrypt
       - ./nginx/prod/certbot/www:/var/www/certbot
